[gd_scene load_steps=21 format=3 uid="uid://d2q54j7jls2mw"]

[ext_resource type="Script" uid="uid://ijq6t4k6ylw0" path="res://scenes/gadgets/jetpack/jetpack_version_2.gd" id="1_vjhi7"]
[ext_resource type="AudioStream" uid="uid://bq1xdjv0n640l" path="res://scenes/gadgets/jetpack/new_audio_stream_playlist.tres" id="2_gx3cu"]
[ext_resource type="Texture2D" uid="uid://d2yhdgimmgorv" path="res://assets/jet_pack/JP base.png" id="3_kmdwa"]
[ext_resource type="Texture2D" uid="uid://c6ncor4y2vswt" path="res://assets/jet_pack/JP key L frame 1.png" id="4_b5mev"]
[ext_resource type="Texture2D" uid="uid://dfblhuhr10xwy" path="res://assets/jet_pack/JP key L frame 2.png" id="5_3fgly"]
[ext_resource type="Texture2D" uid="uid://br5aiij368tgs" path="res://assets/jet_pack/JP key L frame 3.png" id="6_ajvoa"]
[ext_resource type="Texture2D" uid="uid://cv2fxi1nndgaa" path="res://assets/jet_pack/JP key L frame 4.png" id="7_sd8p3"]
[ext_resource type="Texture2D" uid="uid://76wuxdhu6lmq" path="res://assets/jet_pack/JP key R frame 1.png" id="8_f40v2"]
[ext_resource type="Texture2D" uid="uid://bm12q5ly1gcnu" path="res://assets/jet_pack/JP key R frame 2.png" id="9_mc3cw"]
[ext_resource type="Texture2D" uid="uid://dt8neqk0dntbj" path="res://assets/jet_pack/JP key R frame 3.png" id="10_xabwx"]
[ext_resource type="Texture2D" uid="uid://dc0m7ahk205u1" path="res://assets/jet_pack/JP key R frame 4.png" id="11_flje2"]
[ext_resource type="Texture2D" uid="uid://ihnxeafd2ifk" path="res://assets/jet_pack/JP trail frame 1.png" id="12_f0wqw"]
[ext_resource type="Texture2D" uid="uid://b1e7s880nmvt7" path="res://assets/jet_pack/JP trail frame 2.png" id="13_np0cg"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_gx3cu"]
friction = 0.0
bounce = 0.1

[sub_resource type="SpriteFrames" id="SpriteFrames_oxlgb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_b5mev")
}, {
"duration": 1.0,
"texture": ExtResource("5_3fgly")
}, {
"duration": 1.0,
"texture": ExtResource("6_ajvoa")
}, {
"duration": 1.0,
"texture": ExtResource("7_sd8p3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_y3ks1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_f40v2")
}, {
"duration": 1.0,
"texture": ExtResource("9_mc3cw")
}, {
"duration": 1.0,
"texture": ExtResource("10_xabwx")
}, {
"duration": 1.0,
"texture": ExtResource("11_flje2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_wem5j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_f0wqw")
}, {
"duration": 1.0,
"texture": ExtResource("13_np0cg")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikti3"]
size = Vector2(32, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yotyk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yotyk"]
radius = 16.0

[node name="Jetpack" type="RigidBody2D"]
collision_layer = 4
mass = 0.001
physics_material_override = SubResource("PhysicsMaterial_gx3cu")
lock_rotation = true
script = ExtResource("1_vjhi7")
audio_playlist = ExtResource("2_gx3cu")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
update_position = false
update_rotation = false
update_scale = false

[node name="JetpackSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("3_kmdwa")

[node name="KeyLeft" type="AnimatedSprite2D" parent="JetpackSprite"]
unique_name_in_owner = true
visible = false
position = Vector2(-8, 2)
sprite_frames = SubResource("SpriteFrames_oxlgb")

[node name="KeyRight" type="AnimatedSprite2D" parent="JetpackSprite"]
unique_name_in_owner = true
visible = false
position = Vector2(8, 2)
sprite_frames = SubResource("SpriteFrames_y3ks1")
autoplay = "default"

[node name="Stream" type="AnimatedSprite2D" parent="JetpackSprite"]
unique_name_in_owner = true
visible = false
position = Vector2(0, 27)
sprite_frames = SubResource("SpriteFrames_wem5j")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_ikti3")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(8, 40)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -20.0
offset_right = 32.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 4
value = 100.0
fill_mode = 3
show_percentage = false

[node name="InteractableArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(-20, 8)
shape = SubResource("RectangleShape2D_yotyk")
debug_color = Color(1, 1, 1, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(21, 8)
shape = SubResource("RectangleShape2D_yotyk")
debug_color = Color(1, 1, 1, 0.42)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(0, -28)
shape = SubResource("RectangleShape2D_yotyk")
debug_color = Color(1, 1, 1, 0.42)

[node name="PlayerArea" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yotyk")
disabled = true

[node name="Debug" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -15.817

[node name="EquipAudioStream" type="AudioStreamPlayer2D" parent="."]
